--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,37 +1,6 @@
 @import "../../styles/variables";
-$main_colour: royalblue;
-$main_colour_darker: darken($main_colour, 3%);
-$disabled_colour: grey;
-
-@mixin button_core {
-  background: lighten($main_colour, 35%);
-  color: $main_colour_darker;
-  border: 1px solid $main_colour_darker;
-}
 
 .Button {
-  @include button_core;
-  border-radius: 3px;
-  font-weight: 400;
-  padding: 0.5rem 1rem;
-  font-family: $font_stack_sans;
-  cursor: pointer;
-  outline: inherit;
-  font-size: 14px;
-  transition: ease-in 0.3s;
-  &:hover {
-    background: royalblue;
-    color: white;
-  }
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-    &:hover {
-      @include button_core;
-    }
-  }
-
-  @media (max-width: 768px) {
-    width: 100%;
-  }
+  border: 1px solid grey;
+  background-color: $grey;
 }
