--- a/src/components/CodeMetricsControls/CodeMetricsControls.scss
+++ b/src/components/CodeMetricsControls/CodeMetricsControls.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: flex-start;
   gap: 20px;
   width: 100%;
   @media (max-width: 768px) {
