--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,68 +1,8 @@
 body {
-  font-family: $font_stack_sans;
-  color: $foreground;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-kerning: normal;
+  font-family: "Times New Roman", "Georgia", Times, serif;
 }
 
-a {
-  color: royalblue;
-  text-decoration: none;
-  border-bottom: 2px solid rgb(157, 182, 255);
-  &:hover {
-    color: rgb(245, 78, 78);
-    border-bottom: 2px solid rgb(245, 78, 78);
-  }
-}
-
-.post__title {
-  font-size: 1.7rem;
-  margin: 1rem 0;
-}
-
-p,
-ul,
-li {
-  line-height: 1.5;
-}
-
-hr {
-  border: none;
-  height: 1px;
-  background-color: $foreground;
-}
-
-blockquote {
-  font-style: italic;
-}
-
-p > code,
-li > code {
-  font-weight: 600;
-  font-size: 14px !important;
-}
-
-ol[type="a"] > li {
-  font-style: italic;
-}
-
-.introduction p {
-  //  font-style: italic;
-  font-weight: 500;
-  // text-align: center;
-}
-
-.posts-header {
-  margin-bottom: 0;
-}
-
-h2 > code {
-  font-size: 1.2rem !important;
-}
-
-.blog-image-caption {
-  text-align: center;
+h1.post__title {
+  font-size: 1.75rem;
   font-style: italic;
 }
