refactor: restyle error message

--- a/src/components/CodeMetrics/CodeMetrics.scss
+++ b/src/components/CodeMetrics/CodeMetrics.scss
@@ -25,14 +25,8 @@
   }
 
   .error-wrapper {
-    font-family: $font_stack_sans;
-    color: rgb(235, 65, 65);
-    font-weight: 500;
-    font-size: 0.825rem;
-    border: 1px solid rgb(235, 65, 65);
-    border-radius: 3px;
+    color: red;
     padding: 0.5rem;
     margin: 1rem 0;
-    background-color: rgb(255, 210, 210);
   }
 }
