tweaks to header

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -15,11 +15,12 @@ body {
 }
 
 .main {
-  margin: 1.5rem;
+  margin: 1rem;
   max-width: 1080px;
 }
 
 .home-links {
+  margin-top: 1rem;
   * {
     margin-right: 1rem;
   }
