--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,17 @@
 @import "../../styles/variables";
 
 .Header {
+  border-bottom: 1px solid grey;
+  padding-bottom: 0.5rem;
   a {
     text-decoration: none;
     color: black;
+  }
+
+  h1 {
+    font-size: 20px;
+    padding: 0;
+    padding-bottom: 0.5rem;
+    margin: 0;
   }
 }
