style: moar style changes

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,9 @@
 @import "../../styles/variables";
 
 .Button {
-  border: 1px solid grey;
-  background-color: $grey;
+  // border-radius: 3px;
+  //  border: 1px solid grey;
+  // background-color: $grey;
+  //  padding: 0 1rem;
+  cursor: pointer;
 }
