--- a/src/components/CodeMetricsControls/CodeMetricsControls.scss
+++ b/src/components/CodeMetricsControls/CodeMetricsControls.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 20px;
+  justify-content: flex-end;
+  gap: 1rem;
   width: 100%;
-  @media (max-width: 768px) {
-    justify-content: center;
-  }
+  // @media (max-width: 768px) {
+  //   justify-content: center;
+  // }
 }
