--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,10 +8,15 @@
     color: black;
   }
 
+  span {
+    font-size: 14px;
+  }
   h1 {
-    font-size: 20px;
+    font-style: normal;
+    text-transform: uppercase;
+    // font-size: 20px;
     padding: 0;
-    padding-bottom: 0.5rem;
+    //    padding-bottom: 0.25rem;
     margin: 0;
   }
 }
