--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,9 +1,20 @@
 body {
-  font-family: serif;
+  font-family: sans-serif;
 }
 
-h1.post__title {
-  font-size: 1.75rem;
+h1,
+.PageHeader h1 {
+  font-size: 1.35rem;
+}
+
+h2 {
+  font-size: 1.25rem;
+}
+
+h3,
+h4,
+h5 {
+  font-size: 1rem;
 }
 
 blockquote {
@@ -14,4 +25,8 @@ blockquote {
   &__date {
     font-style: italic;
   }
+}
+
+p code {
+  color: black !important;
 }
