--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
     text-transform: uppercase;
     // font-size: 20px;
     padding: 0;
-    //    padding-bottom: 0.25rem;
+    padding-bottom: 0.25rem;
     margin: 0;
   }
 }
