--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,9 @@
 @import "../../styles/variables";
 
 .Header {
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid black;
   padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
   a {
     text-decoration: none;
     color: black;
@@ -13,7 +14,6 @@
   }
   h1 {
     font-style: normal;
-    text-transform: uppercase;
     // font-size: 20px;
     padding: 0;
     padding-bottom: 0.25rem;
