--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -43,7 +43,7 @@ thead.loading::after {
   content: "";
   display: block;
   height: 2px;
-  background-color: blue;
+  background-color: lightgrey;
   position: absolute;
   left: 0;
   bottom: 0;
