style: yet more tweaks

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 body {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Times New Roman", "Times", serif;
   font-smooth: antialiased;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -35,9 +35,9 @@ p code {
   color: black !important;
 }
 
-p,
-ul,
-blockquote,
-a {
-  line-height: 1.5;
-}
+// p,
+// ul,
+// blockquote,
+// a {
+//   line-height: 1.5;
+// }
