--- a/src/components/Scorecard/Scorecard.scss
+++ b/src/components/Scorecard/Scorecard.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .Scorecard {
-  // font-family: sans-serif;
+  font-family: sans-serif;
   font-size: 14px;
   background-color: $grey;
   // border: 1px solid rgba(54, 162, 235, 1);
