--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;600;700&display=swap");
+
 body {
   font-family: "Times New Roman", "Times", serif;
   font-smooth: antialiased;
@@ -32,7 +33,13 @@ blockquote {
 }
 
 p code {
+  font-size: 13px;
   color: black !important;
+}
+
+code {
+  font-size: 12px;
+  font-family: "Noto Sans Mono", monospace;
 }
 
 // p,
