--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .Header {
   border-bottom: 1px solid black;
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
   margin-bottom: 1rem;
   a {
     text-decoration: none;
@@ -10,11 +10,12 @@
   }
 
   span {
-    font-size: 14px;
+    //  font-size: 14px;
   }
   h1 {
+    font-weight: 700;
     font-style: normal;
-    // font-size: 20px;
+    font-size: 28px;
     padding: 0;
     padding-bottom: 0.25rem;
     margin: 0;
