--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;600;700&family=Noto+Serif:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap");
 
 body {
-  font-family: serif;
+  font-family: "Noto Serif", serif;
 }
 
 h1,
