--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,12 +2,12 @@
 
 .Footer {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 80%;
-  margin: 1rem auto;
+  // flex-direction: row;
+  //  justify-content: center;
+  //  width: 80%;
+  margin: 1rem;
   padding: 2rem 0;
-  max-width: 778px;
+  //  max-width: 778px;
   // border-top: 2px solid #eee;
   & > * {
     margin: 0 1rem;
