--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,9 @@
 @import "../../styles/variables";
 
 .Header {
-  border-bottom: 1px solid black;
-  padding-bottom: 1rem;
+  // font-family: $font_stack_sans;
+  //  border-bottom: 1px solid black;
+  // padding-bottom: 1rem;
   margin-bottom: 1rem;
   a {
     text-decoration: none;
@@ -10,14 +11,16 @@
   }
 
   span {
-    //  font-size: 14px;
+    font-family: $font_stack_sans;
+    font-size: 14px;
   }
   h1 {
-    font-weight: 700;
+    font-weight: 800;
     font-style: normal;
-    font-size: 28px;
+    font-size: 22px;
     padding: 0;
-    padding-bottom: 0.25rem;
+    //padding-bottom: 0.25rem;
     margin: 0;
+    letter-spacing: -1px;
   }
 }
