--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;600;700&family=Noto+Serif:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 body {
   font-family: $font_stack_serif;
@@ -45,11 +45,12 @@ p code,
 li code {
   font-size: 14px;
   color: black !important;
+  background: transparent !important;
 }
 
 code {
-  font-size: 13px;
-  font-family: "Noto Sans Mono", monospace;
+  font-size: 14px;
+  font-family: "Jetbrains Mono", monospace;
 }
 
 // .posts-header {
