--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -66,9 +66,9 @@ thead.loading::after {
 
 /* Longer width for article title in Recommended Articles table */
 
-table.articles-table {
-  td:first-of-type,
-  tr th:first-of-type {
-    width: 500px;
-  }
-}
+// table.articles-table {
+//   td:first-of-type,
+//   tr th:first-of-type {
+//     //    width: 500px;
+//   }
+// }
