style: remove border radii globally

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,4 +4,5 @@
 @import "_tables.scss";
 @import "_charts.scss";
 @import "_animations.scss";
+@import "_bootstrap-override.scss";
 @import "bootstrap/dist/css/bootstrap.min.css";
