feature: add IconButton and ViewControls components

--- a/src/components/charts/Chart/Chart.scss
+++ b/src/components/charts/Chart/Chart.scss
@@ -1,5 +1,6 @@
 .Chart {
   margin-bottom: 1rem 0;
+
   &__controls {
     width: 100%;
     display: flex;
@@ -12,6 +13,13 @@
   &__content {
     position: relative;
     display: flexcenter;
+    align-items: center;
+  }
+
+  .card-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
   }
 }
