feature: add caching and date toggle to activities chart

--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -12,6 +12,7 @@ tbody tr:nth-child(even) {
 thead th {
   background-color: #212529;
   color: white;
+  border: 1px solid #212529;
 }
 
 /* Style table cells */
