--- a/src/components/ActivitiesTable/ActivitiesTable.scss
+++ b/src/components/ActivitiesTable/ActivitiesTable.scss
@@ -1,4 +1,5 @@
 .ActivitiesTable {
+  min-height: 400px;
   max-height: 400px;
   overflow-x: auto;
   &__duration-bar {
@@ -18,10 +19,6 @@
     thead th {
       background-color: #212529;
       color: white;
-
-      position: sticky;
-      top: 0;
-      z-index: 1;
     }
   }
 }
