refactor: reposition loading spinnter

--- a/src/components/MetricsView/MetricsView.scss
+++ b/src/components/MetricsView/MetricsView.scss
@@ -4,5 +4,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    .controls-block {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
   }
 }
