style: use Bootstrap table styles throughout

--- a/src/components/ActivitiesTable/ActivitiesTable.scss
+++ b/src/components/ActivitiesTable/ActivitiesTable.scss
@@ -16,9 +16,9 @@
   table {
     font-size: 0.875rem;
 
-    thead th {
-      background-color: #212529;
-      color: white;
-    }
+    // thead th {
+    //   background-color: #212529;
+    //   color: white;
+    // }
   }
 }
