reformat all files to 80 char line length

--- a/src/styles/_charts.scss
+++ b/src/styles/_charts.scss
@@ -3,6 +3,11 @@
   background: white;
   padding: 0 1rem;
   border: 1px solid lightgray;
-  background-color: rgba(255, 255, 255, 1); /* Lighter background color with 80% opacity */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    1
+  ); /* Lighter background color with 80% opacity */
   border-radius: 3px;
 }
