style: rebrutalise apart from metrics page

--- a/src/components/CodeMetrics/CodeMetrics.scss
+++ b/src/components/CodeMetrics/CodeMetrics.scss
@@ -1,7 +1,8 @@
 @import "../../styles/variables";
 
 .CodeMetrics {
-  font-family: $font_stack_sans;
+  font-family: $font_stack_serif;
+
   &__header {
     padding-top: 0.5rem;
     display: flex;
