--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,6 @@ $grey_darkened: #c4c4c4;
 
 $font_stack_sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font_stack_serif: "Merriweather", serif;
+$font_stack_serif: serif;
 $font_stack_mono: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas,
   "Liberation Mono", "Courier New", monospace;
