--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,5 @@
 @import "_charts.scss";
 @import "_animations.scss";
 @import "_bootstrap-override.scss";
-@import "bootstrap/dist/css/bootstrap.min.css";
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+// @import "bootstrap/dist/css/bootstrap.min.css";
+// @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
