--- a/src/prismjs.css
+++ b/src/prismjs.css
@@ -1,12 +1,12 @@
 code[class*="language-"],
 pre[class*="language-"] {
-  color: #a9b7c6;
+  color: #ebdbb2; /* fg1 / fg */
   direction: ltr;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
-  line-height: 1.3;
+  line-height: 1.5;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -22,16 +22,16 @@ pre[class*="language-"]::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection {
-  color: inherit;
-  background: rgba(33, 66, 131, 0.85);
+  color: #fbf1c7; /* fg0 */
+  background: #7c6f64; /* bg4 */
 }
 
 pre[class*="language-"]::selection,
 pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
-  color: inherit;
-  background: rgba(33, 66, 131, 0.85);
+  color: #fbf1c7; /* fg0 */
+  background: #7c6f64; /* bg4 */
 }
 
 /* Code blocks */
@@ -43,19 +43,22 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #2b2b2b;
+  background: #282828; /* bg0_h */
+  border: 2px solid #504945;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
   padding: 0.1em;
-  border-radius: 0.3em;
+  border-radius: 0;
+  border-width: 1px;
+  background: transparent;
 }
 
 .token.comment,
 .token.prolog,
 .token.cdata {
-  color: #808080;
+  color: #a89984; /* fg4 / gray1 */
 }
 
 .token.delimiter,
@@ -64,59 +67,55 @@ pre[class*="language-"] {
 .token.selector,
 .token.important,
 .token.atrule {
-  color: #cc7832;
+  color: #ea6962; /* red2 */
 }
 
 .token.operator,
 .token.punctuation,
 .token.attr-name {
-  color: #a9b7c6;
+  color: #a89984; /* fg4 / gray1 */
 }
 
 .token.tag,
 .token.tag .punctuation,
 .token.doctype,
 .token.builtin {
-  color: #e8bf6a;
+  color: #d8a657; /* yellow2 */
 }
 
 .token.entity,
 .token.number,
 .token.symbol {
-  color: #6897bb;
+  color: #d3869b; /* purple2 */
 }
 
 .token.property,
 .token.constant,
 .token.variable {
-  color: #9876aa;
+  color: #ea6962; /* red2 */
 }
 
 .token.string,
 .token.char {
-  color: #6a8759;
+  color: #89b482; /* green2 */
 }
 
 .token.attr-value,
 .token.attr-value .punctuation {
-  color: #a5c261;
-}
-
-.token.attr-value .punctuation:first-child {
-  color: #a9b7c6;
+  color: #a89984; /* fg4 / gray1 */
 }
 
 .token.url {
-  color: #287bde;
+  color: #89b482; /* green2 */
   text-decoration: underline;
 }
 
 .token.function {
-  color: #ffc66d;
+  color: #a9b665; /* yellow2 */
 }
 
 .token.regex {
-  background: #364135;
+  background: #b8bb26; /* green2 */
 }
 
 .token.bold {
@@ -128,25 +127,9 @@ pre[class*="language-"] {
 }
 
 .token.inserted {
-  background: #294436;
+  background: #a89984; /* fg4 / gray1 */
 }
 
 .token.deleted {
-  background: #484a4a;
-}
-
-code.language-css .token.property,
-code.language-css .token.property + .token.punctuation {
-  color: #a9b7c6;
-}
-
-code.language-css .token.id {
-  color: #ffc66d;
-}
-
-code.language-css .token.selector > .token.class,
-code.language-css .token.selector > .token.attribute,
-code.language-css .token.selector > .token.pseudo-class,
-code.language-css .token.selector > .token.pseudo-element {
-  color: #ffc66d;
+  background: #ea6962; /* red2 */
 }
