--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+a,
+div,
+blockquote {
+  font-family: "Sys";
+  color: #ebdbb2;
+}
+
+div,
+p,
+ul,
+ol,
+blockquote {
+  line-height: 1.3;
+}
 
 blockquote {
   font-style: italic;
@@ -11,79 +32,23 @@ h3,
 h4,
 h5,
 h6 {
+  font-weight: bold;
   font-size: 16px;
 }
 
-// .main-content {
-//   h2 {
-//     font-size: 1.4rem !important;
-//   }
-//   h3 {
-//     font-size: 1.25rem !important;
-//   }
-//   h4,
-//   h5,
-//   h6 {
-//     font-size: 1rem !important;
-//   }
-// }
-
-// .post {
-//   &__date {
-//     font-style: italic;
-//   }
-// }
+a {
+  color: #8dc07c;
+  // font-weight: bold;
+}
 
 p code,
 li code {
   // font-size: 14px;
-  color: black !important;
+  color: #e78a4e !important;
   background: transparent !important;
 }
 
 code {
   font-size: 14px;
-  font-family: "Jetbrains Mono", monospace;
+  font-family: "PP Mono Lig", monospace;
 }
-
-// .posts-header {
-//   font-family: $font_stack_sans;
-//   letter-spacing: -1px;
-// }
-
-// p,
-// ul,
-// blockquote,
-// a {
-//   line-height: 1.5;
-// }
-
-// body {
-//   font-family: $font_stack_serif;
-//   font-size: 15px;
-// }
-
-// h1,
-// .PageHeader h1 {
-//   font-size: 1.3rem;
-// }
-
-// h1.post__title {
-//   //  font-family: $font_stack_sans;
-//   font-size: 28px;
-// ////    margin-bottom: 0.5rem;
-// }
-
-// h2 {
-//   font-size: 1.25rem;
-// }
-
-// h3,
-// h4,
-// h5 {
-//   font-size: 1rem;
-// }
-
-// p {
-//   margin-bottom: 30px;
-// }
