--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,4 @@
 @import "_layout.scss";
 @import "_tables.scss";
 @import "_charts.scss";
-@import "_animations.scss";
-@import "_bootstrap-override.scss";
-// @import "bootstrap/dist/css/bootstrap.min.css";
-// @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+@import "_fonts.scss";
