style: add flag to header

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,6 +6,10 @@ body,
   min-height: 90% !important;
 }
 
+.main {
+  padding-bottom: 2rem;
+}
+
 body {
   max-width: 768px;
   background: #282828;
