--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@ $greenOrig: #98971a;
 $green: #ea6962;
 .Header {
   display: flex;
-  // justify-content: space-between;
+  justify-content: space-between;
   align-items: center;
   flex-direction: row;
   margin: 1rem 0;
@@ -36,5 +36,9 @@ $green: #ea6962;
     display: inline-block;
     border: 1px solid $border;
     //	font-style: italic;
+  }
+
+  .flag {
+    width: 50px;
   }
 }
