--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -49,8 +49,8 @@ li code {
 }
 
 code {
-  font-size: 14px;
-  font-family: "PP Mono Lig", monospace;
+  font-size: 13px;
+  font-family: "Liberation Mono";
 }
 
 .byline {
