--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -1,12 +1,56 @@
 $green: #a9b665;
 $orange: #e78a4e;
 $white: #ebdbb2;
+$buttonHover: #665c54;
+$buttonHighlight: #a89984;
 $buttonBorder: #504945;
 $buttonBackground: #3c3836;
 $anotherDark: #32302f;
 $blue: #7daea3;
 $red: #ea6962;
 $black: #282828;
+
+.ui-responsive-chart-wrapper {
+  width: 100%;
+  max-width: 748px;
+}
+
+.ui-button {
+  color: $white;
+  font-size: 1rem;
+  font-family: "Sys TT";
+  max-width: 100px;
+  text-align: center;
+  padding: 4px 6px 2px;
+  background-color: $buttonBackground;
+  border-width: 2px;
+  border-style: solid;
+  border-color: $buttonHighlight $buttonBorder $buttonBorder $buttonHighlight;
+  box-shadow: none;
+  cursor: pointer;
+  user-select: none;
+  transition:
+    background-color 0.3s,
+    border-color 0.3s,
+    box-shadow 0.3s;
+  margin: 0.25rem 0 0.75rem;
+}
+
+.ui-button:hover {
+  background-color: $buttonHover;
+}
+
+.ui-button:active {
+  background-color: #32302f;
+  border-color: $buttonBorder $buttonHighlight $buttonHighlight $buttonBorder;
+  padding-top: 4px;
+  padding-bottom: 2px;
+}
+
+.ui-button-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
 
 .ui-char-emph {
   border-bottom: 1px solid $white;
@@ -20,6 +64,7 @@ $black: #282828;
 }
 
 .ui-group {
+  max-width: 768px;
   margin-bottom: 1rem;
   &__content {
     //    background-color: $anotherDark;
@@ -63,6 +108,32 @@ $black: #282828;
   }
 }
 
+.ui-static-tooltip {
+  display: flex;
+  justify-content: flex-end;
+  min-height: 20px;
+  min-width: 100px;
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: space-between;
+    align-items: center;
+    div {
+      font-size: 14px;
+    }
+  }
+}
+
+.visible {
+  opacity: 0;
+}
+
+.ui-chart-instruction {
+  text-align: center;
+  font-size: 14px;
+}
+
 .ui-scorecard {
   display: flex;
   flex-direction: row;
@@ -83,4 +154,11 @@ $black: #282828;
 .ui-visx-axis-tick text {
   font-family: "Sys TT";
   font-style: italic;
+}
+
+@media (max-width: 599px) {
+  .ui-visx-axis-tick,
+  .ui-visx-bar-label {
+    display: none;
+  }
 }
