--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -1,50 +1,8 @@
-$green: #a9b665;
-$orange: #e78a4e;
-$white: #ebdbb2;
-$buttonHover: #665c54;
-$buttonHighlight: #a89984;
-$buttonBorder: #504945;
-$buttonBackground: #3c3836;
-$anotherDark: #32302f;
-$blue: #7daea3;
-$red: #ea6962;
-$black: #282828;
+@import "_variables.scss";
 
 .ui-responsive-chart-wrapper {
   width: 100%;
   max-width: 748px;
-}
-
-.ui-button {
-  color: $white;
-  font-size: 1rem;
-  font-family: "Sys TT";
-  max-width: 100px;
-  text-align: center;
-  padding: 4px 6px 2px;
-  background-color: $buttonBackground;
-  border-width: 2px;
-  border-style: solid;
-  border-color: $buttonHighlight $buttonBorder $buttonBorder $buttonHighlight;
-  box-shadow: none;
-  cursor: pointer;
-  user-select: none;
-  transition:
-    background-color 0.3s,
-    border-color 0.3s,
-    box-shadow 0.3s;
-  margin: 0.25rem 0 0.75rem;
-}
-
-.ui-button:hover {
-  background-color: $buttonHover;
-}
-
-.ui-button:active {
-  background-color: #32302f;
-  border-color: $buttonBorder $buttonHighlight $buttonHighlight $buttonBorder;
-  padding-top: 4px;
-  padding-bottom: 2px;
 }
 
 .ui-button-wrapper {
@@ -52,81 +10,8 @@ $black: #282828;
   justify-content: flex-end;
 }
 
-.ui-char-emph {
-  border-bottom: 1px solid $white;
-  &.active {
-    border-bottom: 1px solid $green;
-  }
-}
-
 .ui-error {
   color: $red;
-}
-
-.ui-group {
-  max-width: 768px;
-  margin-bottom: 1rem;
-  &__content {
-    //    background-color: $anotherDark;
-    margin-top: 0.25rem;
-    padding: 0.5rem 0.5rem;
-    border-left: 2px solid $buttonBorder;
-    border-right: 2px solid $buttonBorder;
-    border-bottom: 2px solid $buttonBorder;
-
-    .no-bottom-padding {
-      padding-bottom: 0;
-    }
-  }
-}
-
-.ui-header {
-  background-color: $buttonBackground;
-  line-height: 1 !important;
-  padding: 0.4rem 0.4rem 0.1rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border-width: 5px;
-  border-color: $buttonBorder;
-  border-style: double;
-  .title {
-    font-weight: bold;
-  }
-}
-
-.ui-time-controls {
-  display: inline-flex;
-  .option {
-    cursor: pointer;
-    margin-left: 0.75rem;
-
-    &.active {
-      color: $green !important;
-    }
-  }
-}
-
-.ui-static-tooltip {
-  display: flex;
-  justify-content: flex-end;
-  min-height: 20px;
-  min-width: 100px;
-  .wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    justify-content: space-between;
-    align-items: center;
-    div {
-      font-size: 14px;
-    }
-  }
-}
-
-.visible {
-  opacity: 0;
 }
 
 .ui-chart-instruction {
@@ -134,25 +19,13 @@ $black: #282828;
   font-size: 14px;
 }
 
-.ui-scorecard {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  // border-bottom: 1px solid $buttonBorder;
-  padding: 0.3rem 0.3rem 0.1rem;
-  margin-bottom: 0.25rem;
-}
-
-/* Visx-specific styles */
-
 .ui-visx-axis-line {
-  stroke: #665c54;
+  stroke: $buttonHover;
   stroke-width: 1px;
 }
 
 .ui-visx-axis-tick text {
-  font-family: "Sys TT";
+  font-family: $fontFamilySans;
   font-style: italic;
 }
 
