--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,15 @@
-$grey: #f6f8fa;
-$grey_darkened: #c4c4c4;
+$fontFamilySans: "Sys TT", sans-serif;
+$fontFamilyMono: "Liberation Mono", monospace;
 
-$font_stack_sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-$font_stack_serif: serif;
-$font_stack_mono: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas,
-  "Liberation Mono", "Courier New", monospace;
+$green: #a9b665;
+$orange: #e78a4e;
+$aqua: #8dc07c;
+$white: #ebdbb2;
+$buttonHover: #665c54;
+$buttonHighlight: #a89984;
+$buttonBorder: #504945;
+$buttonBackground: #3c3836;
+$anotherDark: #32302f;
+$blue: #7daea3;
+$red: #ea6962;
+$black: #282828;
