fix: sans-serif variable name

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$fontFamilySans: "Sys TT", sans-serif;
+$fontFamilySans: "Sys", sans-serif;
 $fontFamilyMono: "Liberation Mono", monospace;
 
 $green: #a9b665;
