--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,7 @@ $green: #ea6962;
   flex-direction: row;
   margin: 1rem 0;
   .box-outline {
+    // width: 100%;
     margin-bottom: 15px;
     padding: 5px;
     width: 200px;
