--- a/src/components/UiButton/UiButton.scss
+++ b/src/components/UiButton/UiButton.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .UiButton {
-  font-family: $fontFamilySans;
+  font-family: $fontFamilySans !important;
   color: $white;
   font-size: 1rem;
   font-family: "Sys TT";
@@ -15,10 +15,7 @@
   box-shadow: none;
   cursor: pointer;
   user-select: none;
-  transition:
-    background-color 0.3s,
-    border-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
   margin: 0.25rem 0 0.75rem;
 }
 
