--- a/src/prismjs.css
+++ b/src/prismjs.css
@@ -6,7 +6,7 @@ pre[class*="language-"] {
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
-  line-height: 1.5;
+  line-height: 1.3;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -36,15 +36,18 @@ code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-  padding: 1em;
+  padding: 0.75rem;
   margin: 0.5em 0;
   overflow: auto;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #282828; /* bg0_h */
-  border: 2px solid #504945;
+  /* background: #3c3836; */
+  border-width: 3px;
+  border-color: #665c54;
+  border-style: double;
+  /* border: 2px solid #504945; */
 }
 
 /* Inline code */
