--- a/src/prismjs.css
+++ b/src/prismjs.css
@@ -36,17 +36,17 @@ code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-  padding: 0.75rem;
-  margin: 0.5em 0;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
   overflow: auto;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  /* background: #3c3836; */
-  border-width: 3px;
+  background: #32302f;
+  /* border-width: 3px;
   border-color: #665c54;
-  border-style: double;
+  border-style: double; */
   /* border: 2px solid #504945; */
 }
 
