--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -18,8 +18,12 @@ body {
 
 h2.post__title {
   font-size: 1rem;
-  border-bottom: 2px solid #504945;
-  padding-bottom: 0.5rem;
+  padding: 0.5rem 0.35rem 0.25rem;
+  //padding-top: 6px !important;
+  //padding-bottom: 0.5rem;
+  border-width: 3px;
+  border-color: #665c54;
+  border-style: double;
 }
 
 .post__date {
