--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -3,7 +3,10 @@
 .UiHeader {
   background-color: $buttonBackground;
   line-height: 1 !important;
-  padding: 0.4rem 0.4rem 0.1rem;
+  padding-bottom: 0px !important;
+  padding-top: 5px !important;
+  padding: 5px;
+  // padding: 0.4rem 0.4rem 0.1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
