--- a/src/prismjs.css
+++ b/src/prismjs.css
@@ -6,7 +6,7 @@ pre[class*="language-"] {
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
-  line-height: 1.3;
+  line-height: 1.1;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -43,7 +43,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #32302f;
+  background: #1d2021;
   /* border-width: 3px;
   border-color: #665c54;
   border-style: double; */
