--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,8 +1,28 @@
 @import url("https://fonts.cdnfonts.com/css/liberation-mono");
-
 ::selection {
   background: $blue;
   color: $black;
+}
+
+@font-face {
+  font-family: "Terminus TrueType";
+  src: url(../fonts/TerminusTTF-4.49.3.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Terminus TrueType";
+  src: url(../fonts/TerminusTTF-Bold-4.49.3.ttf);
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Terminus TrueType";
+  src: url(../fonts/TerminusTTF-Italic-4.49.3.ttf);
+  font-weight: normal;
+  font-style: italic;
 }
 
 h1,
@@ -50,13 +70,13 @@ a {
 
 p code,
 li code {
-  font-size: 13px;
+  font-size: 15px;
   color: $orange !important;
   background: transparent !important;
 }
 
 code {
-  font-size: 12px;
+  font-size: 15px;
   font-family: $fontFamilyMono;
 }
 
