--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "Liberation Mono", monospace;
+$fontFamilyMono: "Terminus TrueType";
 
 $green: #a9b665;
 $orange: #e78a4e;
