style: revert to Liberation Mono

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "PP Mono Lig";
+$fontFamilyMono: "Liberation Mono";
 
 $green: #a9b665;
 $orange: #e78a4e;
