--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,12 +12,13 @@ $green: #ea6962;
   align-items: center;
   flex-direction: row;
   margin: 1rem 0;
+  line-height: 1.3;
   .box-outline {
     // width: 100%;
     margin-bottom: 15px;
-    padding: 5px;
+    padding: 3px;
     width: 200px;
-    height: 20px;
+    height: 23px;
     background-color: $orange;
     // border: 2px solid $border;
     box-shadow: 10px 10px 0px 0px $lightBrown;
@@ -30,16 +31,13 @@ $green: #ea6962;
 
   h2 {
     color: #282828 !important;
-    font-size: 18px;
+    font-size: 20px;
     margin: 0;
+    padding-left: 0.5rem;
   }
   span {
     display: inline-block;
     border: 1px solid $border;
     //	font-style: italic;
-  }
-
-  .flag {
-    width: 40px;
   }
 }
