--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -3,6 +3,8 @@
 .UiGroup {
   max-width: 768px;
   margin-bottom: 1rem;
+  line-height: 1.3;
+
   &__content {
     margin-top: 0.25rem;
     padding: 0.5rem 0.5rem;
