--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -2,10 +2,10 @@
 
 .UiHeader {
   background-color: $buttonBackground;
-  line-height: 1 !important;
-  padding-bottom: 0px !important;
-  padding-top: 5px !important;
-  padding: 5px;
+  line-height: 1;
+  //padding-bottom: 0px !important;
+  // padding-top: 5px !important;
+  padding: 3px 5px;
   // padding: 0.4rem 0.4rem 0.1rem;
   display: flex;
   flex-direction: row;
@@ -15,6 +15,12 @@
   border-color: $buttonHover;
   border-style: double;
   &__title {
+    display: flex;
+    align-items: center;
     font-weight: bold;
+    padding-top: 0;
+    span {
+      padding-top: 3.5px;
+    }
   }
 }
