--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,5 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "Input Sans", monospaced;
-
+$fontFamilyMono: "Gohu";
 $green: #a9b665;
 $orange: #e78a4e;
 $aqua: #8dc07c;
