--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -7,7 +7,9 @@
 
 .ui-button-wrapper {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
+  margin-bottom: 1rem;
 }
 
 .ui-error {
