--- a/src/components/UiButton/UiButton.scss
+++ b/src/components/UiButton/UiButton.scss
@@ -15,8 +15,11 @@
   box-shadow: none;
   cursor: pointer;
   user-select: none;
-  transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
-  margin: 0.25rem 0 0.75rem;
+  transition:
+    background-color 0.3s,
+    border-color 0.3s,
+    box-shadow 0.3s;
+  margin: 0.25rem 0;
 }
 
 .UiButton:hover {
