--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -5,7 +5,23 @@
   margin-bottom: 1rem;
   line-height: 1.3;
 
-  &__content {
+  .content {
+    margin-top: 0.25rem;
+    padding: 0.5rem 0.5rem;
+    border-left: 2px solid $buttonBorder;
+    border-right: 2px solid $buttonBorder;
+    border-bottom: 2px solid $buttonBorder;
+    .no-bottom-padding {
+      padding-bottom: 0;
+    }
+  }
+}
+
+.UiGroup__child {
+  max-width: 768px;
+  margin-bottom: 1rem;
+  line-height: 1.3;
+  .content {
     margin-top: 0.25rem;
     padding: 0.5rem 0.5rem;
     border-left: 2px solid $buttonBorder;
