style: add icon to header

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -16,6 +16,10 @@ body {
   max-width: 768px;
 }
 
+.computer-image {
+  width: 30px;
+}
+
 h2.post__title {
   font-size: 1rem;
   padding-bottom: 0px !important;
