--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,7 @@
 $lightBrown: #3c3836;
 $orange: #e78a4e;
-$blue: #7daea3;
-$blueOrig: #458588;
 $border: #504945;
-$borderLight: #ebdbb2;
-$greenOrig: #98971a;
-$green: #ea6962;
+
 .Header {
   display: flex;
   justify-content: space-between;
@@ -14,26 +10,30 @@ $green: #ea6962;
   margin: 1rem 0;
   line-height: 1.3;
   .box-outline {
-    // width: 100%;
     margin-bottom: 15px;
-    padding: 3px;
-    width: 200px;
-    height: 23px;
+    padding: 3px 8px;
+    width: 230px;
+    height: 30px;
     background-color: $orange;
-    // border: 2px solid $border;
     box-shadow: 10px 10px 0px 0px $lightBrown;
     position: relative;
   }
 
+  .header-contents {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 12px;
+  }
   a {
     text-decoration: none !important;
   }
 
   h2 {
+    padding-top: 2px;
     color: #282828 !important;
     font-size: 20px;
     margin: 0;
-    padding-left: 0.5rem;
   }
   span {
     display: inline-block;
