--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -3,10 +3,7 @@
 .UiHeader {
   background-color: $buttonBackground;
   line-height: 1;
-  //padding-bottom: 0px !important;
-  // padding-top: 5px !important;
   padding: 3px 5px;
-  // padding: 0.4rem 0.4rem 0.1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -20,6 +17,7 @@
     font-weight: bold;
     padding-top: 0;
     span {
+      //      font-size: 18px;
       padding-top: 3.5px;
     }
   }
