style: change monospaced font once again

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "Gohu";
+$fontFamilyMono: "Liberation Mono";
 $green: #a9b665;
 $orange: #e78a4e;
 $aqua: #8dc07c;
