--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -1,5 +1,9 @@
 @import "../../styles/variables";
-
+@mixin outset-border {
+  border-width: 2px;
+  border-style: solid;
+  border-color: $buttonHighlight $buttonBorder $buttonBorder $buttonHighlight;
+}
 .UiHeader {
   max-height: 25px;
   max-height: 25px;
@@ -12,9 +16,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  border-width: 3px;
-  border-color: $buttonHover;
-  border-style: double;
+  @include outset-border;
+  // border-width: 3px;
+  // border-color: $buttonHover;
+  // border-style: double;
   &__title {
     display: flex;
     align-items: center;
