--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -27,7 +27,7 @@ h2.post__title {
   padding-bottom: 0px !important;
   padding-top: 5px !important;
   padding: 5px;
-  background-color: $buttonBackground;
+  background-color: $greyDark;
   border-width: 3px;
   border-color: #665c54;
   border-style: double;
