--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -8,9 +8,9 @@
   &__content {
     margin-top: 0.25rem;
     padding: 0.5rem 0.5rem;
-    border-left: 2px solid $buttonBorder;
-    border-right: 2px solid $buttonBorder;
-    border-bottom: 2px solid $buttonBorder;
+    border-left: 2px solid $grey;
+    border-right: 2px solid $grey;
+    border-bottom: 2px solid $grey;
     .no-bottom-padding {
       padding-bottom: 0;
     }
